--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # ----------------------- #
 
 url: http://www.dcassol.com
-title: Daniela Cassol
-email: danicassol@gmail.com
-author: Daniela Cassol
-description: "Daniela's Personal Page"
+title: Sarah Allec
+email: sarah.allec@email.ucr.edu
+author: Sarah Allec
+description: "Sarah's Personal Page"
 
 # ----------------------- #
 #    Jekyll & Plugins     #
