--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.dcassol.com
+url: http://www.sally008.github.io
 title: Sarah Allec
 email: sarah.allec@email.ucr.edu
 author: Sarah Allec
