--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ gems:
 social:
   - icon: github
     title: github
-    url: https://github.com/dcassol  
+    url: https://github.com/sally008 
   - icon: envelope-o
     title: email
-    url: mailto:danicassol@gmail.com
+    url: mailto:sarah.allec@email.ucr.edu
   - icon: linkedin
     title: linkedin
     url: https://www.linkedin.com/in/dcassol/
