--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.sally008.github.io
+url: http://www.sarah-allec.github.io
 title: Sarah Allec
 email: sarah.allec@email.ucr.edu
 author: Sarah Allec
@@ -26,7 +26,7 @@ gems:
 social:
   - icon: github
     title: github
-    url: https://github.com/sally008 
+    url: https://github.com/sarah-allec
   - icon: envelope-o
     title: email
     url: mailto:sarah.allec@email.ucr.edu
