--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ social:
     url: mailto:sarah.allec@email.ucr.edu
   - icon: linkedin
     title: linkedin
-    url: https://www.linkedin.com/in/dcassol/
+    url: https://www.linkedin.com/in/sarah-allec/
   - icon: file-pdf-o
     title: CV
     url: img/CassolDanielaCV.pdf
