--- a/_config.yml
+++ b/_config.yml
@@ -35,11 +35,11 @@ social:
     url: https://www.linkedin.com/in/sarah-allec/
   - icon: file-pdf-o
     title: CV
-    url: img/CassolDanielaCV.pdf
+    url: img/sarah_allec_cv.pdf
 #  - icon: website
 #    title: CV Lattes
 #    url: http://lattes.cnpq.br/5399100590606067
-  - icon: twitter
-    title: twitter
-    url: https://twitter.com/danicassol
+#  - icon: twitter
+#   title: twitter
+#    url: https://twitter.com/danicassol
 
