--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://www.sarah-allec.github.io
+url: http://sarah-allec.github.io
 title: Sarah Allec
 email: sarah.allec@email.ucr.edu
 author: Sarah Allec
