--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ social:
     url: https://github.com/sarah-allec
   - icon: envelope-o
     title: email
-    url: mailto:sarah.allec@pnnl.gov
+    url: mailto:sarah.allec@gmail.com
   - icon: linkedin
     title: linkedin
     url: https://www.linkedin.com/in/sarah-allec/
